--- a/wasm-image-processing/client/index.html
+++ b/wasm-image-processing/client/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <meta charset="utf-8" />
+    <title>Cat image processor</title>
   </head>
   <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <noscript
+      >This page contains webassembly and javascript content, please enable
+      javascript in your browser.</noscript
+    >
+
+    <input type="file" name="image-upload" id="image-upload" value="" />
+    <br />
+    <button id="shrink">Shrink</button>
+    <br />
+    <canvas id="preview"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
